--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Abitha's Personnel Site</title>
+    <title>She's Personnel Site</title>
   </head>
   <body>
 <!--  <img src="Capture.PNG" alt="Abitha's Profile Picture"> -->
@@ -25,7 +25,7 @@
   <tbody>
     <tr>
       <td>2019-</td>
-      <td>SAP ABAP consultant</td>
+      <td>SAP consultant</td>
     </tr>
     <tr>
       <td>2020-</td>
