--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
 <!--  <img src="Capture.PNG" alt="Abitha's Profile Picture"> -->
-   <h1>Abitha</h1>
+   <h1>She</h1>
    <p><em>Founder of <strong>WHAT?</strong></em></p>
-   <p>Started my career as a SAP ABAP developer in Infosys.
+   <p>Started my career as a SAP  developer.
      My journey is going to be more exciting after I have
    landed in APPBREW course by Angella.Eager to update</p>
    <hr>
